# bulkimageenhancer

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  next.config.js  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  tsconfig.json  vercel.json
api/: index.py
app/: layout.tsx  page.tsx
app/account/: page.tsx
app/api/download/: route.ts
app/api/extract-page-ideas/: route.ts
app/api/generate-coloring-pages/: route.ts
app/api/generate-page-ideas/: route.ts
app/api/generate-styles/: route.ts
app/api/proxy/: route.ts
app/api/render-pages/: route.ts
app/api/upscale-pages/: route.ts
app/app/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/new/: layout.tsx  page.tsx
app/projects/[...slug]/: page.tsx
app/simple-test/: page.tsx
app/test/[id]/: page.tsx
backend/: enhance_service.py  main.py  requirements.txt
components/: app-shell.tsx  ui.tsx
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/api/: route.ts
frontend/app/api/health/: route.ts
frontend/app/app/: page.tsx
frontend/app/project/: page.tsx
frontend/app/test-dynamic/: page.tsx
frontend/components/: Uploader.tsx  app-shell.tsx  ui.tsx
lib/: types.ts
src/: cli.py  enhancer.py
worker/: package-lock.json  package.json  tsconfig.json
worker/prisma/: schema.prisma
worker/src/: index.js  index.ts  jobs.js  runner.ts  services.js  storage.js  zip.js
(+21 files in other folders)
