[project]
name = "bulkimageenhancer"
version = "0.1.0"
description = "Bulk image enhancement CLI using Replicate API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]
dependencies = []

[project.scripts]
bulkimageenhancer = "src.cli:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

